Implement API ChangePassword (#48)
